--- a/src/app/modules/training/administration/administration.component.html
+++ b/src/app/modules/training/administration/administration.component.html
@@ -1,12 +1,12 @@
-<ngx-componentsheader actions="actions" [pageName]="pagetitle" [requiredButton]="[{name:'newVendor', label:'New Vendor', icon: 'plus'}]"></ngx-componentsheader>
+<ngx-componentsheader actions="actions" [pageName]="pagetitle" [requiredButton]="rButton">
+</ngx-componentsheader>
 <div style="padding: 10px;"></div>
-
 <!-- <ngx-componentsheader actions="actions" [pageName]="pagetitle" [requiredButton]="[{name:'newType', label:'New Training Type', icon: 'plus'}]"></ngx-componentsheader>
 <div style="padding: 10px;"></div> -->
 
 <div class="container" style="background-color: #ffffff; height: auto;">
-  <nb-tabset>
-    <nb-tab tabTitle="Vendors">
+  <nb-tabset (changeTab)="tabSelected($event)">
+    <nb-tab tabTitle="Vendors" [tabId]="TABS.vendors">
     <div *ngIf="welcome && TrainingVendorData ==''" id="home" class="container tab-pane"><br>
       <div class="center">
         <h5 style="text-align: center;">You have not setup any training vendor</h5>
@@ -130,7 +130,7 @@
 
 
 
-    <nb-tab tabTitle="Types">
+    <nb-tab tabTitle="Types" [tabId]="TABS.types">
       <div *ngIf="trainingType && TrainingTypeData==''" id="home" class="container tab-pane active" style="background-color: white; height: auto;"><br>
         <div class="center">
           <h5 style="text-align: center;">You have not setup any training type</h5>
