--- a/src/app/modules/recruitment/admin-dashboard/jobs/jobs.component.html
+++ b/src/app/modules/recruitment/admin-dashboard/jobs/jobs.component.html
@@ -1,6 +1,8 @@
 <ngx-componentsheader pageName='Jobs'></ngx-componentsheader>
 <nb-card>
-  <div class="container tab-pane active"><br>
-    <ngx-default-content pageHeader={{myPlanHeader}} pageDescription="{{myPlanDesc}}" buttonValue={{myButton}} (buttonClick)="addNewJob()"></ngx-default-content>
-    </div>
+  <nb-card-body>
+    <div class="container tab-pane active"><br>
+      <ngx-default-content pageHeader={{myPlanHeader}} pageDescription="{{myPlanDesc}}" buttonValue={{myButton}} (buttonClick)="addNewJob()"></ngx-default-content>
+      </div>
+  </nb-card-body>
 </nb-card>
