--- a/src/app/modules/employeemodule/managementexist/managementexist.component.html
+++ b/src/app/modules/employeemodule/managementexist/managementexist.component.html
@@ -172,7 +172,17 @@
           </div>
 
         </div>
+
+        <div class="row">
+          <div class="col-sm-4 col-form-label listsubheader"></div> 
+          <div class="col-sm-8" style=" display: flex;justify-content: center; margin-top: 3rem;margin-bottom: 2rem;">
+
+            <button nbButton status="primary"  style="display: flex; justify-content: center;">Proceed</button>
+          </div>
+
+        </div>
       </form>
+
 
     </nb-card-body>
   </div>
