--- a/src/app/modules/employeemodule/retirement/retirement.component.html
+++ b/src/app/modules/employeemodule/retirement/retirement.component.html
@@ -1,4 +1,5 @@
-<ngx-componentsheader pageName='Exit Management' [requiredButton]="topActionButtons" (buttonClick)='modal($event)'>
+
+<ngx-componentsheader pageName='Retirement' [requiredButton]="topActionButtons" (buttonClick)='modal($event)'>
 
 </ngx-componentsheader>
 
