--- a/src/app/modules/employeemodule/retirementform/retirementform.component.html
+++ b/src/app/modules/employeemodule/retirementform/retirementform.component.html
@@ -1,5 +1,7 @@
-<ngx-componentsheader pageName='Exit Request'>
+<ngx-componentsheader pageName='Retirement'>
+
 </ngx-componentsheader>
+
 
 
 <div style="margin-top: 20px;" class="row card-container">
@@ -8,9 +10,10 @@
         <nb-card-body>
             <div>
                 <img src="assets/images/nick.png" width="60%" style="background-size: cover;
-            margin-top: 20px; margin-left: 50px;" class="rounded-circle mb-1" alt="Cinque Terre">
+            margin-top: 20px; margin-left: 30px;" class="rounded-circle mb-1" alt="Cinque Terre">
                 <br>
-                <span class="d-flex flex-row pl-2" style="font-size: x-small; margin-left: 34px;">software
+                <span class="d-flex flex-row pl-2"
+                    style="font-size: x-small; margin-left: 34px; font-weight: bold;">software
                     developer</span>
             </div>
             <br>
@@ -19,7 +22,7 @@
             <div>
                 <div class="d-flex mt-4" style="margin-left: 15px;">
                     <div class="mt-2">
-                    <img  style="height: 20px;" src="assets/icons/StaffID.jpg" alt="">
+                        <img style="height: 20px;" src="assets/icons/StaffID.jpg" alt="">
                     </div>
                     <br>
                     <div class="ml-2">
@@ -55,7 +58,7 @@
                 <div>
                     <div class="d-flex mt-4" style="margin-left: 15px;">
                         <div class="mt-2" style="font-weight: lighter;">
-                     <img style="height: 20px;" src="assets/icons/emailaddress.jpg" alt="">
+                            <img style="height: 20px;" src="assets/icons/emailaddress.jpg" alt="">
                         </div>
                         <br>
                         <div class="ml-2">
@@ -69,7 +72,8 @@
                         </div>
                         <br>
                         <div class="ml-2">
-                            <h6 style="font-size: xx-small; font-weight: lighter; margin-left: 9px;">Date of joining</h6>
+                            <h6 style="font-size: xx-small; font-weight: lighter; margin-left: 9px;">Date of joining
+                            </h6>
                             <h6 style="font-size: x-small; font-weight: bold; ">15th/jan/2022</h6>
                         </div>
 
@@ -82,7 +86,8 @@
                         </div>
                         <br>
                         <div class="ml-2">
-                            <h6 style="font-size: xx-small; font-weight: lighter; margin-left: 9px;">Office location</h6>
+                            <h6 style="font-size: xx-small; font-weight: lighter; margin-left: 9px;">Office location
+                            </h6>
                             <h6 style="font-size: x-small; font-weight: bold; ">Marina,lekki.Lagos</h6>
                         </div>
 
@@ -100,11 +105,24 @@
         <nb-card-body>
             <nb-tabset>
                 <nb-tab tabTitle="Exit Details">
-                    <nb-card-header>
-                        <p style="font-weight: bold;">Exit Details</p>
+                    <nb-card-header style="margin-bottom: 4rem;">
+
+
+                        <div style="display: flex; flex-direction: row; align-items: center;">
+
+                            <div>
+                                <p style="font-weight: bold;">Retirement Details</p>
+                            </div>
+
+                            <div style="margin-left: 1rem;">
+                                <nb-checkbox (checkedChange)="toggle($event)"></nb-checkbox>
+                            </div>
+
+                        </div>
                         <p>Please provide all the required information.All information provided is </p>
-                        <p>and will only be used for HR evaluation. Personal information will be needed
-                            to process post-exi
+                        <p style="margin-bottom: 1rem;">and will only be used for HR evaluation. Personal information
+                            will be needed
+                            to process post-exit
                         </p>
                     </nb-card-header>
 
@@ -237,14 +255,15 @@
                 <nb-tab tabTitle="Exit survey Form">
                     <nb-card-header>
                         <h6>Survey Form</h6>
-                        <p style="margin-top: 15px; font-size: small;">This form is to understand why you have decided to leave
+                        <p style="margin-top: 15px; font-size: small;">This form is to understand why you have decided
+                            to leave
                             and for HR evaluation</p>
                     </nb-card-header>
-        
+
                     <br>
-        
+
                     <form>
-        
+
                         <div class="form-group row" style="margin-top: 15px;">
                             <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Reason For
                                 Leaving</label>
@@ -254,21 +273,23 @@
                                     <nb-radio value="2">Insufficient Challenge</nb-radio>
                                     <nb-radio value="2">Higher grade</nb-radio>
                                     <nb-radio value="2">Others</nb-radio>
-        
-        
+
+
                                 </nb-radio-group>
                                 <input type="text" nbInput fullWidth placeholder="state Reason">
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="Why did you join smartace" class="label col-sm-4 col-form-label listsubheader">Why did
+                            <label for="Why did you join smartace"
+                                class="label col-sm-4 col-form-label listsubheader">Why did
                                 you join smartace</label>
                             <div class="col-sm-8">
                                 <input type="text" nbInput fullWidth placeholder="Why did you join smartace">
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="Why are you levaing" class="label col-sm-4 col-form-label listsubheader">Why are you
+                            <label for="Why are you levaing" class="label col-sm-4 col-form-label listsubheader">Why are
+                                you
                                 leaving</label>
                             <div class="col-sm-8">
                                 <input type="text" nbInput fullWidth placeholder="Enter why you are leaving">
@@ -282,57 +303,63 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader"> What will convince you
+                            <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader"> What will
+                                convince you
                                 to sta</label>
                             <div class="col-sm-8">
-        
-                                <textarea rows="5" nbInput fullWidth placeholder="Enter What will convince you"></textarea>
+
+                                <textarea rows="5" nbInput fullWidth
+                                    placeholder="Enter What will convince you"></textarea>
                             </div>
-        
+
                         </div>
-        
+
                         <div class="form-group row">
                             <label for="Best and worst working experience with us"
-                                class="label col-sm-4 col-form-label listsubheader">Best and worst working experience with
+                                class="label col-sm-4 col-form-label listsubheader">Best and worst working experience
+                                with
                                 us</label>
                             <div class="col-sm-8">
-        
-                                <textarea rows="5" nbInput fullWidth placeholder="Enter Additional comment here"></textarea>
+
+                                <textarea rows="5" nbInput fullWidth
+                                    placeholder="Enter Additional comment here"></textarea>
                             </div>
-        
+
                         </div>
-        
+
                         <hr>
-        
-        
+
+
                         <br>
-        
-        
-        
-        
+
+
+
+
                     </form>
-        
-        
-        
+
+
+
                     <br>
                     <nb-card-header>
                         <p style="font-weight: bold;">New job acquisition(optional)</p>
                     </nb-card-header>
-        
+
                     <form style="margin-top: 15px;">
-        
+
                         <div class="form-group row" style="margin-top: 15px;">
-                            <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Select a job</label>
+                            <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Select a
+                                job</label>
                             <div class="col-sm-8">
                                 <nb-radio-group [(ngModel)]="selectedOption" class="d-flex">
                                     <nb-radio value="1">yes</nb-radio>
                                     <nb-radio value="2">No</nb-radio>
-        
+
                                 </nb-radio-group>
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="New Employee Name" class="label col-sm-4 col-form-label listsubheader">New Employee
+                            <label for="New Employee Name" class="label col-sm-4 col-form-label listsubheader">New
+                                Employee
                                 Name</label>
                             <div class="col-sm-8">
                                 <input type="text" nbInput fullWidth placeholder="Company New Employee Name">
@@ -351,7 +378,7 @@
                                 <input type="text" nbInput fullWidth placeholder="Pay">
                             </div>
                         </div>
-        
+
                         <div class="form-group row">
                             <label for="Location" class="label col-sm-4 col-form-label listsubheader">Location</label>
                             <div class="col-sm-8">
@@ -366,39 +393,40 @@
                                         <img style="height: 20px;" src="assets/icons/warning.jpg" alt="">
                                     </div>
                                     <div style="margin-top: 10px; margin-left: 10px; font-weight: bold;">
-                                        <p style="font-weight: bold;">please note that once you submit and its approved by Exit
+                                        <p style="font-weight: bold;">please note that once you submit and its approved
+                                            by Exit
                                             team.</p>
                                         <p style="font-weight: bold;margin-top: -9px;"> it cannot be reverted</p>
                                     </div>
-        
+
                                 </div>
                             </div>
                         </div>
-        
+
                         <br>
-        
-        
+
+
                         <div class="form-group row">
                             <div class="col-md-4" style="display: flex;align-items:center">
-        
+
                             </div>
                             <div class="col-md-8 col-xxl-8 ">
-        
+
                                 <div class="d-flex" style="margin-top: 40px; margin-bottom: 60px;">
-        
+
                                     <button nbButton status="primary" class="d-flex column">Submit</button>
                                     <button nbButton outline status="primary" class="d-flex column"
                                         style="background-color: white; margin-left: 10px;">Rejected</button>
-        
+
                                 </div>
-        
+
                             </div>
                         </div>
-        
-        
-        
+
+
+
                     </form>
-        
+
                 </nb-tab>
 
                 <nb-tab tabTitle="Clearance Form">
@@ -456,9 +484,10 @@
                                     style="display: flex;flex-direction: row; justify-content: space-between;border: 1px solid rgb(0, 60, 255)  ; padding: 0.5rem; border-radius: 5px;">
                                     <div class="d-flex">
                                         <i class="fas fa-file-pdf" style="color: red; "></i>
-                                       <span style="margin-left: 2rem;  font-weight: bold;"> Clearance Attachment</span>
+                                        <span style="margin-left: 2rem;  font-weight: bold;"> Clearance
+                                            Attachment</span>
                                     </div>
-                                    <div >
+                                    <div>
                                         <a href="">view all</a>
                                     </div>
                                 </div>
@@ -539,9 +568,10 @@
                                     style="display: flex;flex-direction: row; justify-content: space-between;border: 1px solid rgb(0, 60, 255)  ; padding: 0.5rem; border-radius: 5px;">
                                     <div class="d-flex">
                                         <i class="fas fa-file-pdf" style="color: red; "></i>
-                                       <span style="margin-left: 2rem;  font-weight: bold;"> Clearance Attachment</span>
+                                        <span style="margin-left: 2rem;  font-weight: bold;"> Clearance
+                                            Attachment</span>
                                     </div>
-                                    <div >
+                                    <div>
                                         <a href="">view all</a>
                                     </div>
                                 </div>
@@ -602,9 +632,10 @@
                                     style="display: flex;flex-direction: row; justify-content: space-between;border: 1px solid rgb(0, 60, 255)  ; padding: 0.5rem; border-radius: 5px;">
                                     <div class="d-flex">
                                         <i class="fas fa-file-pdf" style="color: red; "></i>
-                                       <span style="margin-left: 2rem;  font-weight: bold;"> Clearance Attachment</span>
+                                        <span style="margin-left: 2rem;  font-weight: bold;"> Clearance
+                                            Attachment</span>
                                     </div>
-                                    <div >
+                                    <div>
                                         <a href="">view all</a>
                                     </div>
                                 </div>
@@ -625,21 +656,14 @@
 
                     <hr>
                     <br>
-
-
-
                     <br>
-                  
-
-
-
 
                 </nb-tab>
 
 
             </nb-tabset>
 
-            
+
         </nb-card-body>
 
     </nb-card>
