--- a/src/app/modules/employeemodule/exitwarning/exitwarning.component.html
+++ b/src/app/modules/employeemodule/exitwarning/exitwarning.component.html
@@ -16,7 +16,7 @@
             </div>
            
             <div class="d-flex" style="margin-top: 0.5rem;padding: 3rem;">
-                <button nbButton status="primary" class="d-flex column">Proceed</button>
+                <button nbButton status="primary" class="d-flex column" (click)="onClick()">Proceed</button>
                 <button nbButton outline status="primary" class="d-flex column"
                     style="background-color: white; margin-left: 1rem;">Go back</button>
             </div>
