--- a/src/app/modules/leave/leavetype/leavetype.component.html
+++ b/src/app/modules/leave/leavetype/leavetype.component.html
@@ -2,10 +2,11 @@
 <ngx-componentsheader [pageName]='LeaveType' [requiredButton]="topActionButtons" (buttonClick)='modal($event)'>
 
 </ngx-componentsheader>
-
+<div id="calendar"></div>
 <ngx-tableheader></ngx-tableheader>
-<ngx-tablecomponent [tableColum]="tableColumns"></ngx-tablecomponent>
 
+
+<ngx-tablecomponent [tableColum]="tableColumns"></ngx-tablecomponent>
 
 <ngx-side-modal [(show)]='showLeaveTypeModal' style="width: 500px; height: 1000px;">
     <div modal-header>Add Leave Type</div>
