--- a/src/app/modules/employeemodule/promotioninfo/promotioninfo.component.html
+++ b/src/app/modules/employeemodule/promotioninfo/promotioninfo.component.html
@@ -2,189 +2,150 @@
 
 </ngx-componentsheader>
 
+<div class="row">
+    <div class="col-md-4 col-xxl-4">
+    <nb-card>
+    <nb-card-body style="padding: 1.5rem 1rem 0 1rem !important;">
+        <div class="fmContainer">
+            <div style="padding-bottom: 0;">
+<div style="display: flex;align-items: center;justify-content: center;">
+<div class="employee-avatar">
+<img src="assets/icons/camera.jpg"> 
+</div>
+</div>
 
-
-<div style="margin-top: 20px;" class="row card-container">
-
-    <nb-card class="col-md-3 " style="display: flex;justify-items: center; text-align: centre;">
-        <nb-card-body>
-            <div>
-                <img src="assets/images/nick.png" width="60%" style="background-size: cover;
-             margin-top: 20px; margin-left: 34px;" class="rounded-circle mb-1" alt="Cinque Terre">
-                <br>
-                <div
-                    style="display: flex; flex-direction: column;align-items: center; text-align: center; margin-right: 2rem; margin-top: 1rem;">
-                    <span class="d-flex flex-row pl-2" style="font-size: small; ; font-weight: bold;">Kelvin
-                        jeff
-                    </span>
-
-                    <span class="d-flex flex-row pl-2" style="font-size: x-small;">software
-                        developer
-                    </span>
+                <div style="text-align: center; padding: 10px;">
+                    <p class="header6-medium" style="margin-bottom: 1rem !important;">Kelvin Jeff</p>
+                    <p style="color: #95A8B8 !important;">software developer</p>
                 </div>
-
-
+             
             </div>
-            <br>
-
-
-            <div>
-
-
-                <div>
-
-
-
-                    <div class="d-flex mt-4" style="margin-left: 15px;">
-                        <div class="mt-2">
-                            <img src="assets/icons/department.jpg" style="height: 20px; color: #4847E0;" alt="">
-                        </div>
-                        <br>
-                        <div class="ml-2">
-                            <h6 style="font-size: small; color: #4847E0; font-weight: bold; margin-left: 9px; margin-top: 0.5rem;">
-                                Personal Information
-                            </h6>
-
-                        </div>
-
+    
+    
+        </div>
+    </nb-card-body>
+    <div  style.height="{{(scase.offsetHeight < 402)?380 : (scase.offsetHeight - 210) }}px" >
+        <div #linklist style="display: flex;flex-direction: column;" *ngFor="let hiringlist of employeeviewlist; let i = index">
+    
+            <div (click)="selectPanel(hiringlist,i)" [ngClass]="{'wizardlistactive': hiringlist.status == 'Active','wizardlistinactive': hiringlist.status != 'Active'}" style="display: flex;flex-direction: row;margin: .5rem 0 .5rem 0; align-items: center;cursor: pointer;">
+            <div style="padding-left: 1rem;"><nb-icon icon="{{hiringlist.iconname}}" status="{{hiringlist.status == 'Active'? 'primary': 'none'}}"></nb-icon></div>
+            <div style="padding-left: 0.625rem;"><span [ngClass]="{'listtextActive': hiringlist.status == 'Active','listtextInactive': hiringlist.status != 'Active'}" >{{hiringlist.label}} </span> </div>
+            </div>
+            
+      </div>
+    </div>
+    
+    </nb-card>
+    </div>
+    <div class="col-md-8 col-xxl-8">
+        <nb-card>
+            <nb-card-body>
+                <div #scase [ngSwitch]="selectedCase">
+                    <div class="fmContainer" *ngSwitchCase="'personal_Info'">
+                        <nb-tabset>
+                            <nb-tab tabTitle="Personal information">
+                                <nb-card-header style="margin-bottom: 4rem;">
+            
+            
+                                    <div style="display: flex; flex-direction: row; align-items: center;">
+            
+                                        <div>
+                                            <p style="font-weight: bold;">Personal Information</p>
+                                        </div>
+            
+            
+                                    </div>
+            
+                                </nb-card-header>
+            
+            
+            
+            
+                                <div *ngFor="let i of [0,1,2,3,4,5,6,7,8]" style="font-weight: bold; padding: 2rem;">
+                                    <div class="row">
+                                        <div class="col-sm-4">
+                                            <span>First Name</span>
+                                        </div>
+                                        <div class="col-sm-8">
+                                            <span>Abiodun</span>
+                                        </div>
+                                    </div>
+                                </div>
+            
+            
+            
+            
+            
+                                <br>
+            
+                            </nb-tab>
+                            <nb-tab tabTitle="Qualifications">
+                                <nb-card-header>
+                                    <h6>Qualifications</h6>
+            
+                                </nb-card-header>
+            
+                                <br>
+            
+                              
+                                <ngx-tablecomponent [tableColum]="tableColumns"></ngx-tablecomponent>
+            
+            
+            
+                            </nb-tab>        
+                        </nb-tabset>
                     </div>
-
-                    <div class="d-flex mt-4" style="margin-left: 15px;">
-                        <div class="mt-2">
-                            <img src="assets/icons/Announcements.jpg" style="height: 20px; color: #4847E0;" alt="">
-                        </div>
-                        <br>
-                        <div class="ml-2">
-                            <h6 style="font-size: small; color: #4847E0; font-weight: bold; margin-left: 9px; margin-top: 0.5rem;">
-                                Promotion Information
-                            </h6>
-
-                        </div>
-
+                    <div class="fmContainer" *ngSwitchCase="'promotion_info'">
+                        <nb-tabset>
+                            <nb-tab tabTitle="Promotional Information">
+                                <nb-card-header>
+                                    <h6>Promotional Promotion</h6>
+            
+                                </nb-card-header>
+            
+                                <br>
+            
+            
+                                <div *ngFor="let i of [0,1,2,3,4,5,6,7,8]" style="font-weight: bold; padding: 2rem;">
+                                    <div class="row">
+                                        <div class="col-sm-4">
+                                            <span>Appointment Date</span>
+                                        </div>
+                                        <div class="col-sm-8">
+                                            <span>24/08/2021</span>
+                                        </div>
+                                    </div>
+                                </div>
+                              
+            
+            
+                                <div class="row">
+                                    <div class="col-md-4" style="display: flex;align-items:center">
+                                        <div class="d-flex" style="margin-top: 40px; margin-bottom: 60px;">
+            
+                                            <button nbButton status="primary" class="d-flex column">Approve</button>
+                                            <button nbButton outline status="primary" class="d-flex column"
+                                                style="background-color: white; margin-left: 10px;">Discard</button>
+                                               
+                                              
+                                        </div>
+                                    </div>
+                                    <div class="col-md-8 col-xxl-8 ">
+            
+                                        
+            
+                                    </div>
+                                </div>
+            
+            
+                            </nb-tab>
+            
+            
+                        </nb-tabset>
                     </div>
-
-
-                    
-
-
-
+           
                 </div>
-            </div>
-
-
-        </nb-card-body>
-    </nb-card>
-
-    <div class="col-sm-1" style="margin-left: -30px; margin-right: -30px;"></div>
-
-    <nb-card class="col-md-8">
-        <nb-card-body>
-            <nb-tabset>
-                <nb-tab tabTitle="Personal information">
-                    <nb-card-header style="margin-bottom: 4rem;">
-
-
-                        <div style="display: flex; flex-direction: row; align-items: center;">
-
-                            <div>
-                                <p style="font-weight: bold;">Personal Information</p>
-                            </div>
-
-
-                        </div>
-
-                    </nb-card-header>
-
-
-
-
-                    <div *ngFor="let i of [0,1,2,3,4,5,6,7,8]" style="font-weight: bold; padding: 2rem;">
-                        <div class="row">
-                            <div class="col-sm-4">
-                                <span>First Name</span>
-                            </div>
-                            <div class="col-sm-8">
-                                <span>Abiodun</span>
-                            </div>
-                        </div>
-                    </div>
-
-
-
-
-
-                    <br>
-
-                </nb-tab>
-                <nb-tab tabTitle="Qualifications">
-                    <nb-card-header>
-                        <h6>Qualifications</h6>
-
-                    </nb-card-header>
-
-                    <br>
-
-                  
-                    <ngx-tablecomponent [tableColum]="tableColumns"></ngx-tablecomponent>
-
-
-
-                </nb-tab>
-
-
-                
-
-
-                <nb-tab tabTitle="Promotional Information">
-                    <nb-card-header>
-                        <h6>Promotional Promotion</h6>
-
-                    </nb-card-header>
-
-                    <br>
-
-
-                    <div *ngFor="let i of [0,1,2,3,4,5,6,7,8]" style="font-weight: bold; padding: 2rem;">
-                        <div class="row">
-                            <div class="col-sm-4">
-                                <span>Appointment Date</span>
-                            </div>
-                            <div class="col-sm-8">
-                                <span>24/08/2021</span>
-                            </div>
-                        </div>
-                    </div>
-                  
-
-
-                    <div class="row">
-                        <div class="col-md-4" style="display: flex;align-items:center">
-                            <div class="d-flex" style="margin-top: 40px; margin-bottom: 60px;">
-
-                                <button nbButton status="primary" class="d-flex column">Approve</button>
-                                <button nbButton outline status="primary" class="d-flex column"
-                                    style="background-color: white; margin-left: 10px;">Discard</button>
-                                   
-                                  
-                            </div>
-                        </div>
-                        <div class="col-md-8 col-xxl-8 ">
-
-                            
-
-                        </div>
-                    </div>
-
-
-                </nb-tab>
-
-            </nb-tabset>
-
-
-        </nb-card-body>
-
-    </nb-card>
-
-
-
+            </nb-card-body>
+        </nb-card>
+    </div>
 </div>
