updated retirement,exit form,exitrequear

--- a/src/app/modules/self-service/employeeevents/employeeevents.component.html
+++ b/src/app/modules/self-service/employeeevents/employeeevents.component.html
@@ -2,7 +2,7 @@
  <div style="padding-top:10px"> <h6 class="header4-bold">{{Events}}</h6></div>
  <div class="card" style="height: calc(100vh - 170px - 5rem);">
     
-    <ngx-calender style="height: 100%;" (dateClick)="showPopover()"></ngx-calender>
+    <ngx-calender #calendar style="height: 100%;" (dateClick)="showPopover()"></ngx-calender>
  </div>
  <!-- <ngx-calender style="height: 100vh;"></ngx-calender> -->
 <nb-card>
