--- a/src/app/@theme/components/customizableheader/customizableheader.component.html
+++ b/src/app/@theme/components/customizableheader/customizableheader.component.html
@@ -16,23 +16,5 @@
 </div>
 
 <div class="header-container">
-  <nb-actions size="small">
-
- <!-- <nb-action class="control-item">
-      <nb-search type="rotate-layout"></nb-search>
-    </nb-action> -->
-    <!-- <nb-action class="control-item" icon="email-outline"></nb-action> -->
-    <nb-action class="control-item" >
-      <nb-icon icon="bell-outline"></nb-icon>
-    </nb-action>
-    <nb-action class="user-action" *nbIsGranted="['view', 'user']" >
-      <nb-user [nbContextMenu]="userMenu"
-               [name]="user?.name"
-               [picture]="user?.picture" onlyPicture>
-      </nb-user>
-    </nb-action>
-
-   
-  </nb-actions>
-
+  <ng-content select="headerActions"></ng-content>
 </div>
