--- a/src/app/modules/expense/expense-management/expense-management.component.html
+++ b/src/app/modules/expense/expense-management/expense-management.component.html
@@ -25,7 +25,7 @@
     (pageChange)="loadNewPage($event)"
   ></ngx-tablecomponent>
 </div>
-<ngx-side-modal [(show)]="showModal">
+<ngx-side-modal [(show)]="showModal" [isPage]="true">
   <div modal-header>Add project</div>
   <div modal-body>
     <div class="my-form">
