--- a/src/app/components/employee-master-search/employee-master-search.component.html
+++ b/src/app/components/employee-master-search/employee-master-search.component.html
@@ -1,7 +1,10 @@
-<p>employee-master-search works!</p>
-
 <div>
-    <button (click)="showMasterSearchModal()">Show</button>
+    <div style="display: inline-flex;">
+        <div *ngFor="let i of [1,2,3,4,5]">
+            <img style="width: 3rem; height: 3rem; border-radius: 50%; margin-left: -0.5rem;"  src="https://via.placeholder.com/300/09f.png/fff%20C/O%20https://placeholder.com/"/>
+        </div>
+    </div>
+    <button (click)="showMasterSearchModal()" class="underlined-button">Edit</button>
 </div>
 
 <ngx-side-modal [(show)]="showModal">
@@ -42,6 +45,41 @@
                     <option></option>
                 </select>
             </div>
+            <div class="col-sm-4 form-group">
+                <label style="visibility: hidden;">Gender</label>
+                <button nbButton status='primary' style="min-width: unset !important;">Search</button>
+            </div>
+        </div>
+        <div>
+            <div style="display: flex; justify-content: flex-end; margin: 1rem 0rem">
+                <span style="color: #4847E0; cursor: pointer;">Select All</span>
+            </div>
+            <div style="border-top: 0.5px solid #CCCCCC;;">
+                <div  *ngFor="let i of [1,2,3,4,5]" style="display: flex; align-items: center; border-bottom: 0.5px solid #CCCCCC; padding: 1rem;">
+                    <input type="checkbox" style="margin-right: 2rem;"/>
+                    <div style="display: flex;">
+                        <img style="width: 3rem; height: 3rem; border-radius: 50%; margin-right: 1rem;"  src="https://via.placeholder.com/300/09f.png/fff%20C/O%20https://placeholder.com/"/>
+                        <div style="display: flex; justify-content: space-between; flex-direction: column;">
+                            <div style="font-family: Rubik;
+                                    font-style: normal;
+                                    font-weight: normal;
+                                    font-size: 16px;
+                                    line-height: 19px;
+                                    display: flex;">Sherrif Shorunke</div>
+                            <div style="font-family: Rubik;
+                                    font-style: normal;
+                                    font-weight: normal;
+                                    font-size: 14px;
+                                    display: flex;
+                                    color: #6C757D;">UX</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div style="display: flex; justify-content: flex-end; margin: 1rem;">
+            <button nbButton status='primary' style="margin-right: 0.5rem;">Add beneficiary</button>
+            <button nbButton status='primary' outline style="background: transparent;">Cancel</button>
         </div>
     </div>
 </ngx-side-modal>
