--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -125,7 +125,7 @@
                 </div>
                 </div>
                 <div style="height: 18.75rem;width: 100%;">
-                  <div echarts [options]="customizePieOption" class="echart" style="height: 100%;"></div>
+                  <div echarts [options]="options" class="echart" style="height: 100%;"></div>
                 </div>
 
 
